Fix issue with outlook emails, add logging

--- a/OptInService/appsettings.json
+++ b/OptInService/appsettings.json
@@ -5,6 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "OptInNumbersFile": "/Users/nswimberghe/TwilioDemos/optin-numbers.txt",
   "OptInEmailsFile": "/Users/nswimberghe/TwilioDemos/optin-emails.txt"
