--- a/OptInService/OptInService.csproj
+++ b/OptInService/OptInService.csproj
@@ -10,6 +10,10 @@
     <ItemGroup>
       <PackageReference Include="SendGrid" Version="9.28.1" />
       <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
+      <PackageReference Include="Serilog" Version="2.12.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
       <PackageReference Include="Twilio" Version="6.2.4" />
       <PackageReference Include="Twilio.AspNet.Core" Version="7.0.0" />
     </ItemGroup>
